# app-protocol

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  spec.md  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: add-host-app.md  agentic.md  architectural-properties.md  architecture.md  conformance.md  core-concepts.md  create-app-project.md  development-flow.md  examples.md  (+15 more)
examples/python/: PLAN.md  README.md  __main__.py  pyproject.toml
examples/python/apps/agent/: app.py  mcp_http.py  mcp_server.py  mcp_stdio.py  registry.py  server.py
examples/python/apps/backend/: app.py  registry.py  server.py
examples/python/apps/portal/: app.py  main.py  registry.py
examples/python/cases/tasks/task_create/: task_create.us.md  task_create_agentic_case.py  task_create_api_case.py  task_create_domain_case.py  task_create_ui_case.py
examples/python/cases/tasks/task_list/: task_list.us.md  task_list_agentic_case.py  task_list_api_case.py  task_list_domain_case.py  task_list_ui_case.py
examples/python/cases/tasks/task_move/: task_move.us.md  task_move_agentic_case.py  task_move_api_case.py  task_move_domain_case.py  task_move_ui_case.py
examples/python/core/: __init__.py  agentic_case.py  api_case.py  domain_case.py  stream_case.py  ui_case.py
examples/python/core/shared/: __init__.py  app_base_context.py  app_host_contracts.py  app_infra_contracts.py  app_mcp_contracts.py  app_structural_contracts.py
(+658 files in other folders)
